apps/media/tubesync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubesync-cloudflare
  namespace: media
spec:
  ingressClassName: cloudflare
  rules:
    - host: tubesync.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: tubesync
                port:
                  number: 4848
            path: /
            pathType: Prefix
